--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </section>
     <!-- show result  -->
     <section  class="container">
+        <!-- how much result found -->
+        <div id="numberResult">
+
+        </div> <br>
         <!--  show all books info -->
         <div id="displayBook" class="row row-cols-1 row-cols-md-3 g-4">
 
