updated done now

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
     <!-- show result  -->
     <section  class="container">
-        <!-- how much result found -->
+        <!-- show how much result found -->
         <div id="numberResult">
 
         </div> <br>
